# UNICC-Safety-Lab

./: .gitignore  .replit  Dockerfile  README.md  ai_engine_core.py  main.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-I-am-preparing-for-a-live-demo-and-need-to-create-a-per_1776134162222.txt  Pasted-Okay-let-s-prioritize-changes-based-on-the-files-you-ve_1775945704090.txt  UNICC_Project2_Council_Prototype_LLM_1775765489566.ipynb
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ImportAgentModal.tsx
client/src/components/ui/: card.tsx  progress.tsx  table.tsx
client/src/context/: AgentsContext.tsx
client/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  EvaluationDetailPage.tsx  EvaluationsPage.tsx  EvaluationsResultsPage.tsx  ResultsPage.tsx  SaasDashboardUi.tsx  SettingsPage.tsx
client/src/pages/sections/: DashboardMainSection.tsx  PageHeader.tsx  SidebarSection.tsx
python_engine/: council_eval.py
scripts/: post-merge.sh
server/: routes.ts
tests/: test_main.py
