[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "UNICC AI Safety Lab — FastAPI evaluation engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "openai>=2.31.0",
    "anthropic>=0.30.0",
    "requests>=2.33.1",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
